--- a/thesisv2.Rmd
+++ b/thesisv2.Rmd
@@ -25,8 +25,8 @@ We begin by visualizing baseline characteristics and survival curves stratified 
 
 ## Load packages and data
 
-library(dplyr, lib.loc = 'D:/old data/Msc/master_thesis/R packages')
-library(tidyverse, lib.loc = 'D:/old data/Msc/master_thesis/R packages')
+library(dplyr)
+library(tidyverse)
 library(lubridate)
 library(here)
 library(ggthemes)
@@ -480,6 +480,15 @@ cox_model_full %>% tbl_regression(exponentiate = TRUE)
 tests = cox.zph(cox_model_full) 
 tests$table |> knitr::kable(digits = 1)
 
+
+#graphically
+
+ggcoxzph(tests)
+
+# testing influential observations via deviance residuals
+
+ggcoxdiagnostics(cox_model_full, type = "deviance",
+                 linear.predictions = FALSE, ggtheme = theme_bw())
 
 ```
 
